@@ -101,6 +101,34 @@
 
 		return $result;
 	}
+	
+	function check_php_upload_max_filesize(){
+		$required = 2*1024*1024;
+		$recommended = 16*1024*1024;
+
+		$current = ini_get('upload_max_filesize');
+
+		if(str2mem($current) >= $recommended){
+			$req = 2;
+		}
+		else if(str2mem($current) >= $required){
+			$req = 1;
+		}
+		else{
+			$req = 0;
+		}
+
+		$result = array(
+			'name' => 'PHP upload max filesize ',
+			'current' => $current,
+			'required' => mem2str($required),
+			'recommended' => mem2str($recommended),
+			'result' => $req,
+			'error' => '2M is minimum for PHP upload filesize'
+		);
+
+		return $result;
+	}
 
 	function check_php_max_execution_time(){
 		$required = 300;
@@ -434,6 +462,7 @@
 		$result[] = check_php_version();
 		$result[] = check_php_memory_limit();
 		$result[] = check_php_post_max_size();
+		$result[] = check_php_upload_max_filesize();
 		$result[] = check_php_max_execution_time();
 		$result[] = check_php_timezone();
 		$result[] = check_php_databases();
